# pdomain-ocr-labeler-spa

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .python-conventions.md  .repo-setup.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONVENTIONS.md  DOCGRAPH.md  Dockerfile  Makefile  OPEN_QUESTIONS.md  README.md  docgraph.toml  install.ps1  install.sh  mise.toml  pyproject.toml
.basedpyright/: baseline.json
.codex/agents/: python-implementer.toml  python-reviewer.toml
.github/workflows/: ci.yml  release.yml
.ship-issue-tmp/: 1-191-issue.json  1-191.json  1-192-issue.json  1-192.json  1-253-issue.json  1-253.json
build_hooks/: spa_check.py
docs/: BUGS_FOUND.md  DEVELOPMENT.md  M0-acceptance.md  PARITY_GAPS_2026_05_14.md  PARITY_STATUS.md  README.md  ROADMAP.md  hifi-followons.md  integration-session-plan.md  next-steps-2026-05-15.md  plan-to-usable.md
docs/architecture/: 00-overview.md  01-data-models.md  02-backend.md  03-frontend.md  04-image-viewport.md  05-word-matches.md  06-toolbar-actions.md  07-word-edit-dialog.md  08-page-actions.md  09-persistence.md  10-export.md  11-notifications.md  12-hotkeys-a11y.md  13-driver-contract.md  14-testing.md  15-deployment-dev.md  18-text-normalization.md  19-auto-rotation.md  2026-05-12-backend-design.md  2026-05-12-data-models-design.md  2026-05-12-decisions-design.md  2026-05-12-image-viewport-design.md  2026-05-12-toolbar-actions-design.md  21-konva-renderer.md  22-page-surface-wireup.md  23-page-payload-backend.md  24-shell-layout.md  25-drawer-worklist.md  26-right-panel-detail.md  27-right-panel-sections.md  28-palettes-pickers.md  module-map.md  runtime-flows.md
docs/archive/: BUGS_RESOLVED.md  QUESTIONS_RESOLVED.md
docs/context/: completed-github-issues-ledger.md  current-state.md  decisions.md  intent-map.md  open-findings.md  retirement-manifest.md
docs/decisions/: 2026-07-13-shared-page-record-boundary.md  2026-07-19-closed-github-issues-archive.md
docs/handoff/: 2026-07-17-issue-tracker-migration.md
docs/issues/: 2026-05-22-gh-430-ci-equivalence.md  2026-05-22-gh-433-openapi-drift.md  2026-05-22-gh-437-openapi-schema-quality.md  2026-05-23-gh-460-resolver-narrowing.md  README.md
docs/plans/: 2026-05-16-complete-labeler-spa.md  2026-06-03-labeler-spa-legacy-parity.md  2026-06-06-parity-gap-completion.md  2026-06-08-compute-settings-panel.md  2026-06-10-export-manifest-and-send-to-trainer.md  2026-06-14-labeler-spa-pgdp-alignment-backlog.md  2026-06-16-pdomain-ui-primitive-migration.md  2026-07-14-pagerecord-import-convergence.md  2026-07-14-review-fixes.md
docs/process/: DEVELOPMENT.md  full-exercise-workflow.md  lint-deviations.md  writing-style.md
docs/research/: 2026-05-22-deep-code-review-security-scan.md  2026-05-23-ci-e2e-root-cause.md  2026-05-31-doc-audit.md  2026-06-03-open-plans-specs-review.md  2026-06-14-pgdp-design-handoff-labeler-spa-gap-analysis.md
docs/runbooks/: local-dev.md  release.md  troubleshooting.md
docs/specs/: 2026-05-12-auto-rotation-design.md  2026-05-12-decisions-design.md  2026-05-12-deployment-dev-design.md  2026-05-12-driver-contract-design.md  2026-05-12-export-design.md  2026-05-12-frontend-shell-design.md  2026-05-12-glyph-annotations-design.md  2026-05-12-header-bar-design.md  2026-05-12-hotkeys-a11y-design.md  2026-05-12-image-viewport-design.md  2026-05-12-milestones-design.md  2026-05-12-notifications-design.md  2026-05-12-overview-architecture-design.md  2026-05-12-page-actions-design.md  2026-05-12-persistence-design.md  2026-05-12-root-page-design.md  2026-05-12-testing-design.md  2026-05-12-text-normalization-design.md  2026-05-12-word-edit-dialog-design.md  2026-05-12-word-matches-design.md  2026-05-15-hifi-redesign-plan.md  2026-05-24-F-001-export-path-traversal.md  2026-05-24-F-002-cors-and-auth-hardening.md  2026-06-01-ocr-labeler-behavior-completion-design.md  2026-06-05-selection-operations-parity.md  2026-06-06-word-edit-dialog-wiring.md  2026-06-10-multi-line-detail.md  2026-06-12-event-store-undo.md
docs/usage/: quickstart.md
frontend/: .prettierignore  components.json  eslint.config.js  knip.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  jsx-dev-runtime-shim.ts  main.tsx  toolchain.test.tsx
scripts/: _screenshot_utils.py  behavior_coverage.py  ci-against-master.sh  do-release.sh  generate_exercise_fixture.py  local-check.sh  local-dev.sh  local-frontend-install.sh  local-run.sh  local-setup-py.sh  local-setup.sh  pip-audit-with-manifest.sh  release-common.sh  take_cutover_screenshot.py  update-pd-deps.sh
specs/: .specrc  00-overview.md  01-data-models.md  02-backend.md  03-frontend.md  04-image-viewport.md  05-word-matches.md  06-toolbar-actions.md  07-word-edit-dialog.md  08-page-actions.md  09-persistence.md  10-export.md  11-notifications.md  12-hotkeys-a11y.md  13-driver-contract.md  14-testing.md  15-deployment-dev.md  16-milestones.md  17-decisions.md  18-text-normalization.md  19-auto-rotation.md  20-glyph-annotations.md  21-header-bar.md  21-konva-renderer.md  22-page-surface-wireup.md  23-page-payload-backend.md  README.md
src/pd_ocr_labeler_spa/: __init__.py  __main__.py  bootstrap.py  settings.py
src/pdomain_ocr_labeler_spa/: __main__.py  bootstrap.py  settings.py
tests/: conftest.py  test_behavior_coverage.py  test_packaging.py  test_update_github_actions.py
tests/conformance/: test_legacy_envelopes.py  test_new_contract.py  test_response_models.py
tests/e2e/: __init__.py  conftest.py  exercise_real_project.py  helpers.py  test_a11y.py  test_browser_verification.py  test_driver_contract.py  test_environment_sanity.py  test_export_manifest_and_trainer.py  test_image_click_selection.py  test_keyboard_only.py  test_multi_line_detail.py  test_ocr_reload_words.py  test_panel_chrome_regression.py  test_parity_app_loads.py  test_parity_chrome.py  test_parity_grid_actions.py  test_parity_persistence.py  test_smoke.py  (+9 more)
(+620 files in other folders)
