[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pd-ocr-labeler-spa"
dynamic = ["version"]
description = "FastAPI + React SPA replacement for pd-ocr-labeler — single wheel that serves API + bundled SPA"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.13,<3.14"
dependencies = [
    # Server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    "sse-starlette>=2.1",
    "anyio>=4.4",
    # OCR / image domain (wired in later milestones; harmless to declare now)
    "pd-book-tools",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
modal = [
    "modal>=0.66",
]

[project.scripts]
# Console script name preserved verbatim from the legacy `pd-ocr-labeler`
# so end users can swap binaries without re-learning the command.
# See specs/15-deployment-dev.md §2.
pd-ocr-labeler-ui = "pd_ocr_labeler_spa.__main__:main"
pd-ocr-labeler-spa-export = "pd_ocr_labeler_spa.core.jobs.handlers.export_cli:main"

[project.urls]
Homepage = "https://github.com/ConcaveTrillion/pd-ocr-labeler-spa"
Repository = "https://github.com/ConcaveTrillion/pd-ocr-labeler-spa"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "httpx>=0.28",
    "basedpyright>=1.39.4",
]
e2e = [
    "pytest-playwright>=0.5",
]

[tool.uv.sources]
# Pinned tag chosen to match the version pgdp-prep currently consumes,
# so a single devcontainer can host both repos against the same
# pd-book-tools build. Bump via `make upgrade-pd-book-tools` when ready.
pd-book-tools = { git = "https://github.com/ConcaveTrillion/pd-book-tools.git", tag = "v0.9.0" }

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pd_ocr_labeler_spa"]

[tool.hatch.build.targets.wheel.force-include]
"src/pd_ocr_labeler_spa/static" = "pd_ocr_labeler_spa/static"

# Local guard mirroring the CI check in `.github/workflows/release.yml`:
# fail `uv build` / `hatch build` if the SPA bundle is missing, so the
# wheel can never be published with a blank `static/`. See
# `build_hooks/spa_check.py` for the rationale.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hooks/spa_check.py"

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "SIM", "UP", "RUF", "ERA", "T20"]
ignore = [
    # FastAPI's canonical pattern for dependency injection puts Depends()
    # in default arguments. Ignoring this rule across the whole repo.
    "B008",
    # `Foo(str, Enum)` — Pydantic patterns use this idiom widely.
    "UP042",
    # En-dash (–) appears in spec line-range citations throughout docstrings
    # (e.g. "lines 503–576"). This is deliberate typographic convention;
    # # noqa cannot silence rules inside string literals.
    "RUF002",
]

[tool.ruff.lint.per-file-ignores]
# Spec-aligned coordinate names (L/R/T/B) trigger E741 in tests.
"tests/*" = ["E741"]
# CLI scripts and fixture scripts — print() is the output mechanism
"scripts/*.py" = ["T201"]
# Headless export CLI console script — print() for user-facing output
"src/pd_ocr_labeler_spa/core/jobs/handlers/export_cli.py" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live app stack (deselect with '-m not integration')",
    "slow: marks tests that call real OCR/DocTR and take more than a few seconds",
]

[tool.basedpyright]
# Include source, tests, and scripts. Match the src-layout this repo uses.
include = ["src", "tests", "scripts"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    # e2e tests depend on playwright which lives in the optional [e2e] group
    # (not installed in dev baseline); exclude to avoid spurious import errors.
    "tests/e2e",
]

# "standard" mode during initial migration; Task 8 upgrades to "recommended".
# See workspace decision doc 2026-05-17-strict-linting.md.
typeCheckingMode = "standard"
# NOTE: failOnWarnings deferred — recommended mode surfaces stub warnings
# from FastAPI/Starlette stubs that lag the runtime.
# failOnWarnings = true

# Import cycles are structural (adapter protocols, carrier closures, etc.)
# and resolved via TYPE_CHECKING guards. Suppress the per-file error here;
# actual import order issues would surface as runtime ImportErrors.
reportImportCycles = "none"

# Tell basedpyright where the venv is so it finds third-party stubs.
venvPath = "."
venv = ".venv"

# Per-execution-environment overrides (typeCheckingMode not valid per-env).
[[tool.basedpyright.executionEnvironments]]
root = "src"

[[tool.basedpyright.executionEnvironments]]
root = "tests"

[[tool.basedpyright.executionEnvironments]]
root = "scripts"
