[build-system]
requires = ["hatchling>=1.27,<2", "hatch-vcs>=0.4,<1"]
build-backend = "hatchling.build"

[project]
name = "pdomain-ocr-labeler-spa"
dynamic = ["version"]
description = "FastAPI + React SPA replacement for pd-ocr-labeler — single wheel that serves API + bundled SPA"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.13,<3.14"
dependencies = [
    # Server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    "sse-starlette>=2.1",
    "anyio>=4.4",
    # Security advisory lower-bounds (direct constraints so pip-audit stays clean
    # regardless of what fastapi/httpx pull in transitively).
    # idna>=3.15 — CVE-2026-45409 (ReDoS in idna.encode())
    "idna>=3.15",
    # starlette>=1.0.1 — PYSEC-2026-161 / GHSA-86qp-5c8j-p5mr (host-header handling)
    "starlette>=1.0.1",
    # urllib3>=2.7.0 — PYSEC-2026-141 / PYSEC-2026-142
    "urllib3>=2.7.0",
    # OCR / image domain (wired in later milestones; harmless to declare now)
    "pdomain-book-tools>=0.18.0",
    "huggingface_hub>=0.23",
    # Suite plumbing: port probing + registry (find_available_port, register_self)
    "pdomain-ops>=0.7.1",
]

[project.optional-dependencies]
modal = [
    "modal>=0.66",
]

[project.scripts]
# Console script for the SPA server. See specs/15-deployment-dev.md §2.
pdomain-ocr-labeler-ui = "pdomain_ocr_labeler_spa.__main__:main"
pdomain-ocr-labeler-spa-export = "pdomain_ocr_labeler_spa.core.jobs.handlers.export_cli:main"

[project.urls]
Homepage = "https://github.com/pdomain/pdomain-ocr-labeler-spa"
Repository = "https://github.com/pdomain/pdomain-ocr-labeler-spa"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "psutil>=6.0",
    "ruff>=0.15.13",
    "httpx>=0.28",
    # httpx2 must be installed so starlette>=1.2's TestClient imports it
    # (starlette 1.2 does `import httpx2 as httpx` and emits StarletteDeprecationWarning
    # if httpx2 is absent; filterwarnings=error turns that into a hard collection failure).
    # Keep httpx above for e2e tests that import it directly as a plain HTTP client.
    "httpx2>=2.3.0",
    "basedpyright>=1.39.4",
    "gitlint>=0.19.1",
]
e2e = [
    "pytest-playwright>=0.5",
]

[[tool.uv.index]]
name = "pdomain-index-pip"
url = "https://pdomain.github.io/pdomain-index-pip/simple/"
explicit = true

[tool.uv]
required-version = ">=0.11.16"

[tool.uv.sources]
pdomain-book-tools = { index = "pdomain-index-pip" }
pdomain-ops = { index = "pdomain-index-pip" }

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
# Include the gitignored Vite build output in BOTH the sdist and the wheel.
# The static/ directory is in .gitignore (generated artefact), so hatchling's
# default VCS-based file selection would silently omit it. Setting `artifacts`
# globally (not just in the wheel target) ensures:
#   1. The sdist contains src/pdomain_ocr_labeler_spa/static/ (the built SPA).
#   2. The wheel built from that sdist also includes the static files.
# Without this, `uv build` (default: sdist then wheel-from-sdist) produces a
# wheel with 0 frontend files even when artifacts is set only in the wheel
# target, because hatchling builds the wheel in a non-git temp dir from the
# sdist and applies the per-target artifact spec against that dir.
artifacts = ["src/pdomain_ocr_labeler_spa/static/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/pdomain_ocr_labeler_spa"]
# The global `artifacts` above also covers this target; no additional per-wheel
# force-include needed. force-include is intentionally omitted to avoid
# duplicate-path ValueError (global artifacts + same-path force-include).

# Local guard mirroring the CI check in `.github/workflows/release.yml`:
# fail `uv build` / `hatch build` if the SPA bundle is missing, so the
# wheel can never be published with a blank `static/`. See
# `build_hooks/spa_check.py` for the rationale.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hooks/spa_check.py"

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = [
    # Baseline (pre-existing)
    "E", "W",       # pycodestyle errors/warnings
    "F",            # pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "B",            # flake8-bugbear
    "SIM",          # flake8-simplify
    "UP",           # pyupgrade
    "RUF",          # ruff-specific
    "ERA",          # eradicate — commented-out code
    "T20",          # flake8-print
    # Added per 2026-05-17 strict-linting rollout
    "ANN",          # flake8-annotations — force type hints on all sigs
    "S",            # flake8-bandit — security rules
    "C4",           # flake8-comprehensions
    "PERF",         # perflint — performance anti-patterns
    "TC",           # flake8-type-checking — TYPE_CHECKING guards
    "TID",          # flake8-tidy-imports
    "PT",           # flake8-pytest-style
    "RET",          # flake8-return
    "PL",           # pylint subset
    "D",            # pydocstyle
    "BLE",          # flake8-blind-except
    "TRY",          # tryceratops
    "LOG",          # flake8-logging
    "G",            # flake8-logging-format
]
ignore = [
    # FastAPI dependency-injection pattern — Depends() in default args.
    "B008",
    # `Foo(str, Enum)` — Pydantic patterns use this idiom widely.
    "UP042",
    # Docstring style conflicts: pick D211 over D203, D213 over D212.
    "D203",
    "D212",
    # Missing module/package/magic-method docstrings — add incrementally.
    "D100",
    "D104",
    "D107",
    # ANN101/ANN102 removed in ruff >= 0.2 (self/cls annotation rules dropped).
    # Keeping entries here produces a "removed rule" warning; left as comment
    # to document they were intentionally excluded when they existed.
    # "ANN101", "ANN102",
    # PLR0913 (too-many-arguments): FastAPI routers legitimately use many params.
    "PLR0913",
    # PLR2004 (magic-value-comparison): common in geometry/threshold code.
    "PLR2004",
    # TRY003 (long-message-outside-exception-class): f-string error messages
    # are the project-wide convention; enforcing everywhere is too noisy.
    "TRY003",
    # COM812 conflicts with ruff formatter.
    "COM812",
    # ANN401 (use of Any): FastAPI/Pydantic patterns require Any in several places.
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
# Spec-aligned coordinate names (L/R/T/B) trigger E741 in tests.
"tests/*" = ["E741"]
# CLI scripts and fixture scripts — print() is the output mechanism.
# RUF002: intentional Unicode (×) in dimension docstrings.
"scripts/*.py" = ["T201", "S603", "S607", "ANN", "D", "RUF002"]
# Headless export CLI console script — print() for user-facing output
"src/pdomain_ocr_labeler_spa/core/jobs/handlers/export_cli.py" = ["T201"]
# Tests: assert is the idiom (S101); magic numbers common (PLR2004);
# no annotations required (ANN); no docstrings required (D);
# security rules relaxed (S105/S106/S311 — test fixtures);
# pytest.raises match= not always required (PT011);
# /tmp paths OK in tests (S108); trivial comparisons intentional (PLR0133);
# top-level imports in test funcs are pattern (PLC0415);
# subprocess S603/S607 in integration tests; blind-except OK (BLE001);
# loop-var reassignment as pattern (PLW2901); list-building in tests (PERF401).
"tests/**/*.py" = [
    # Security — assert, hardcoded secrets, random, subprocess, /tmp, bind-all
    "S101", "S105", "S106", "S311", "S603", "S607", "S108", "S104",
    # Annotations and docstrings — not required in tests
    "ANN", "D",
    # Pylint subset — magic numbers, trivial comparisons, loop reassign
    "PLR2004", "PLR0133", "PLW2901", "PLR0911", "PLR0912", "PLR0913",
    # pytest style — match= not required, use-implicit-none not enforced
    "PT011", "PT006",
    # Type-checking import guards — TC deferred in test files
    "TC001", "TC002", "TC003",
    # Non-top-level imports in test functions are the pattern
    "PLC0415",
    # Blind-except in test helpers
    "BLE001",
    # Performance — list-building in tests
    "PERF401",
    # tryceratops — long messages OK in tests
    "TRY003", "TRY300", "TRY301",
    # Return simplification — test-fixture patterns
    "RET504",
    # Subprocess without check= — integration test pattern
    "PLW1510",
    # RUF002: intentional Unicode (–, ×, ſ) in spec citations and
    # dimension strings — project-wide typography convention.
    "RUF002",
    # Error messages, structural test patterns
    "PT018", "PLR1714", "PLW0108", "PLC0414", "C408",
    # E402 — conditional imports at test function scope
    "E402",
]
# API routers: ANN/D backlogs deferred; TID252 (relative imports) common pattern.
# BLE001/TRY: exception handling in FastAPI routes is the norm.
# S101: assert-narrowing is the project convention in FastAPI dependencies.
# TC001/TC002/TC003: TYPE_CHECKING refactor deferred; PLC0415 deferred.
"src/pdomain_ocr_labeler_spa/api/*.py" = [
    "ANN", "D", "BLE001", "TRY", "TID252",
    "S101", "TC001", "TC002", "TC003", "PLC0415",
    "RET504", "PT018", "PLR0911", "PLR0912", "PLR0915",
    # RUF002: intentional en-dashes in spec-citation docstrings.
    "RUF002",
]
# Core domain — ANN/D deferred for existing large modules.
# TC/BLE/TRY/PLC0415 deferred; RET504 implicit-return-in-try is project style.
"src/pdomain_ocr_labeler_spa/core/*.py" = [
    "ANN", "D", "TID252",
    "TC001", "TC002", "TC003", "PLC0415",
    "BLE001", "TRY", "RET504",
    # RUF002: intentional en-dashes in spec citations; ſ in text_normalize.py.
    "RUF002",
]
"src/pdomain_ocr_labeler_spa/core/**/*.py" = [
    "ANN", "D", "TID252",
    "TC001", "TC002", "TC003", "PLC0415",
    "BLE001", "TRY", "RET504",
    # RUF002: intentional en-dashes in spec citations; ſ in text_normalize.py.
    "RUF002",
]
# Adapters — ANN/D/TRY deferred; adapters interface with external libs.
# S101: assert used for invariant-checking in OCR adapters.
"src/pdomain_ocr_labeler_spa/adapters/**/*.py" = [
    "ANN", "D", "TRY", "BLE001", "TID252",
    "S101", "TC001", "TC002", "TC003", "PLC0415",
]
# Top-level module files (__main__, bootstrap, settings, __init__).
# PLC0415: deferred imports in __main__ are intentional (uvicorn, device_info).
# PLR09xx: complex main/bootstrap functions are by design.
"src/pdomain_ocr_labeler_spa/*.py" = [
    "ANN", "D", "TC001", "TC002", "TC003",
    "PLC0415", "PLR0911", "PLR0912", "PLR0915", "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",                       # show short summary of all non-pass outcomes
    "--strict-markers",          # fail on unknown markers
    "--strict-config",           # fail on unknown pytest config keys
    "--cov=pdomain_ocr_labeler_spa",
    "--cov-branch",              # measure branch coverage
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
]
pythonpath = ["src"]
markers = [
    "integration: marks tests that require a live app stack (deselect with '-m not integration')",
    "slow: marks tests that call real OCR/DocTR and take more than a few seconds",
    "e2e: marks Playwright end-to-end tests (require SPA bundle + Playwright browser)",
]
filterwarnings = [
    # Treat all warnings as errors — surfaces deprecation issues at dev time.
    "error",
    # Unclosed sockets/event loops from TestClient async teardown.
    # PytestUnraisableExceptionWarning wraps ResourceWarning from asyncio
    # cleanup that races with pytest teardown — not actionable in test code.
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # websockets 14.x: the legacy websockets API is deprecated.
    # Uvicorn auto-detects WebSocket protocols at startup and triggers this
    # warning from a background thread, which pytest's filterwarnings=error
    # converts into a thread exception that kills the server before /healthz
    # responds. Ignore DeprecationWarnings from the websockets package to allow
    # server startup in tests. Format: "action:message:category:module:line"
    # — module pattern matches on the import path of the warning's origin.
    "ignore::DeprecationWarning:websockets.*",
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
    # defusedxml 0.7.1 (latest stable): `defusedxml.cElementTree` is a deprecated
    # shim module that emits DeprecationWarning at import time. doctr imports it
    # transitively via `doctr.io.elements.defuse_stdlib()` during predictor
    # initialisation. We cannot upgrade defusedxml (0.7.1 is the latest stable;
    # 0.8.0rc2 exists but is a pre-release) and cannot patch doctr. Ignore
    # narrowly by module so any other DeprecationWarnings still surface.
    "ignore::DeprecationWarning:defusedxml.*",
    # Add new ignores below as new warnings surface — each with a comment
    # explaining the package and why we tolerate it.
]

[tool.basedpyright]
# Include source, tests, and scripts. Match the src-layout this repo uses.
include = ["src", "tests", "scripts"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    # e2e tests depend on playwright which lives in the optional [e2e] group
    # (not installed in dev baseline); exclude to avoid spurious import errors.
    "tests/e2e",
]

# "recommended" is the workspace-canonical strict mode per 2026-05-17 decisions.
# Catches unannotated functions, inferred-Any propagation, untyped decorators,
# and missing return types that "standard" mode skips.
typeCheckingMode = "recommended"
failOnWarnings = true

# Import cycles are structural (adapter protocols, carrier closures, etc.)
# and resolved via TYPE_CHECKING guards. Suppress the per-file error here;
# actual import order issues would surface as runtime ImportErrors.
reportImportCycles = "none"

# Tell basedpyright where the venv is so it finds third-party stubs.
venvPath = "."
venv = ".venv"

# Per-execution-environment overrides (typeCheckingMode not valid per-env).
[[tool.basedpyright.executionEnvironments]]
root = "src"

[[tool.basedpyright.executionEnvironments]]
root = "tests"

[[tool.basedpyright.executionEnvironments]]
root = "scripts"
